Fixed data baloon on mobile to be positioned inside the screen limits

--- a/src/sass/_common/common.scss
+++ b/src/sass/_common/common.scss
@@ -728,17 +728,10 @@ label + input {
 }
 
 @media (max-width: 768px) {
-    .show_mobile {
-        &[data-balloon]:before, &[data-balloon]:after {
+    .show-mobile {
+        &[data-balloon]:before {
             display: block !important;
             transform: translate(-15%, 0) !important;
-        }
-        &[data-balloon-pos=left]:before {
-            top: -100%;
-            right: 50%;
-        }
-        &[data-balloon-pos=top]:before {
-            left: -50%;
         }
     }
 }
@@ -758,6 +751,14 @@ label + input {
                 width: 100%;
                 text-align: left !important;
             }
+        }
+    }
+    .show-mobile {
+        &[data-balloon]:before {
+            position: fixed;
+            width: 80vw;
+            left: 18vw;
+            bottom: auto;
         }
     }
 }
